--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
         <!-- 全员名单 -->
         <div id="all-member">
             <div class="title" id="all-member-title">全员名单</div>
-            <div class="digit" id="all-member-count">0</div>
+            <span class="digit" id="all-member-count">0</span>
+            <span class="digit">人</span>
+            <div class="digit">(支持用空格、回车、中英文逗号分隔)</div>
+            <div class="digit">(名单结尾不要有空格或回车)</div>
             <textarea id="all-member-text" class="box" rows="8"></textarea>
         </div>
         <!-- 实际名单 -->
         <div id="real-member">
             <div class="title" id="real-member-title">实际名单</div>
-            <div class="dight" id="real-member-count">0</div>
+            <span class="dight" id="real-member-count">0</span>
+            <span class="digit">人</span>
             <textarea id="real-member-text" class="box" rows="8"></textarea>
         </div>
         <!-- 结果 -->
         <div id="result">
             <div class="title" id="result-title">缺席人员</div>
-            <div class="dight" id="result-count">0</div>
+            <span class="dight" id="result-count">0</span>
+            <span class="digit">人</span>
             <div class="box" id="result-show"></div>
         </div>
     </div>
