add loading animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Find Who Absent</title>
 </head>
 <body>
-    <div id="head">Find Who Absent</div>
+    <div id="head">加载中...</div>
     <div id="main">
         <!-- 全员名单 -->
         <div id="all-member">
