--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +11,17 @@
     <script src="jquery-3.6.0.js"></script>
     <title>Find Who Absent</title>
 </head>
+
 <body>
     <div id="head">加载中...</div>
     <div id="main">
         <!-- 全员名单 -->
         <div id="all-member">
             <div class="title" id="all-member-title">全员名单</div>
-            <span class="digit" id="all-member-count">0</span>
-            <span class="digit">人</span>
+            <div>
+                <span class="digit" id="all-member-count">0</span>
+                <span class="digit">人</span>
+            </div>
             <div class="digit">(支持用空格、回车、中英文逗号分隔)</div>
             <div class="digit">(名单结尾不要有空格或回车)</div>
             <textarea id="all-member-text" class="box" rows="8"></textarea>
@@ -25,18 +29,23 @@
         <!-- 实际名单 -->
         <div id="real-member">
             <div class="title" id="real-member-title">实际名单</div>
-            <span class="dight" id="real-member-count">0</span>
-            <span class="digit">人</span>
+            <div>
+                <span class="dight" id="real-member-count">0</span>
+                <span class="digit">人</span>
+            </div>
             <textarea id="real-member-text" class="box" rows="8"></textarea>
         </div>
         <!-- 结果 -->
         <div id="result">
             <div class="title" id="result-title">缺席人员</div>
-            <span class="dight" id="result-count">0</span>
-            <span class="digit">人</span>
+            <div>
+                <span class="dight" id="result-count">0</span>
+                <span class="digit">人</span>
+            </div>
             <div class="box" id="result-show"></div>
         </div>
     </div>
     <div id="blank"></div>
 </body>
+
 </html>
