change favicon and add kizuna theme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-mordern.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon3.png" type="image/png">
     <script src="script.js"></script>
     <script src="jquery-3.6.0.js"></script>
     <title>Find Who Absent</title>
@@ -18,6 +18,7 @@
         <select>
             <option value="style-mordern.css">现代</option>
             <option value="style-neu.css">2.5D</option>
+            <option value="style-ai.css">Kizuna Ai</option>
             <option value="style.css">蓝色</option>
         </select>
     </div>
