use textarea to show output

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <span class="dight" id="result-count">0</span>
                 <span class="digit">人</span>
             </div>
-            <div class="box" id="result-show"></div>
+            <textarea class="box" id="result-show"></textarea>
         </div>
     </div>
     <div id="blank"></div>
